--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!-- Basic Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>PixMod</title>
-<meta name="description" content="Resize your images simply, easily, and smoothly — without complications">
-<meta name="keywords" content="resize,resizeimg,resize img,PixMod,pixmod,resizer,مغير الحجم,ري سايز,ريسايز">
+<title>M7D-PLATFORMS</title>
+<meta name="description" content="TANJIRO PLATFORMS">
+<meta name="keywords" content="منصات المطور تانجيرو,M7D-PLATFORMS,TANJIRO-PLATFORMS">
 <meta name="author" content="M7D">
-<meta name="image" content="https://i.postimg.cc/8cFwCQ8H/Pix-Mod-Logo-1024x1024.png">
+<meta name="image" content="https://i.postimg.cc/Vv2fyMfd/Picsart-25-09-22-17-44-46-057.jpg">
 <meta name="theme-color" content="#2b2b2b">
 
 <!-- Favicon -->
@@ -24,18 +24,18 @@
 
 <!-- Open Graph Meta Tags (Facebook, WhatsApp, LinkedIn, etc.) -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://pix-mod.vercel.app/">
-<meta property="og:title" content="PixMod">
-<meta property="og:description" content="Resize your images simply, easily, and smoothly — without complications">
-<meta property="og:image" content="https://i.postimg.cc/8cFwCQ8H/Pix-Mod-Logo-1024x1024.png">
+<meta property="og:url" content="https://m7d-platforms.vercel.app/">
+<meta property="og:title" content="M7D-PLATFORMS">
+<meta property="og:description" content="TANJIRO PLATFORMS">
+<meta property="og:image" content="https://i.postimg.cc/Vv2fyMfd/Picsart-25-09-22-17-44-46-057.jpg">
 <meta property="og:image:width" content="1024">
 <meta property="og:image:height" content="1024">
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="PixMod">
-<meta name="twitter:description" content="Resize your images simply, easily, and smoothly — without complications">
-<meta name="twitter:image" content="https://i.postimg.cc/8cFwCQ8H/Pix-Mod-Logo-1024x1024.png">
+<meta name="twitter:title" content="M7D-PLATFORMS">
+<meta name="twitter:description" content="TANJIRO PLATFORMS">
+<meta name="twitter:image" content="https://i.postimg.cc/Vv2fyMfd/Picsart-25-09-22-17-44-46-057.jpg">
     <title>PixMod</title>
   </head>
   <body>
